fix app.json for build

--- a/app.json
+++ b/app.json
@@ -15,7 +15,8 @@
     },
     "assetBundlePatterns": ["**/*"],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": false,
+      "bundleIdentifier": "com.tomoyaki.news-app"
     },
     "android": {
       "adaptiveIcon": {
